--- a/ProdutosZone/appsettings.json
+++ b/ProdutosZone/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=LAPTOP-OPH5U10J\\SQLEXPRESS;Initial Catalog=TesteGame;Integrated Security=True;Encrypt=False;Trust Server Certificate=True"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
